fix: Resolve table height and overflow issues in resizable widget

--- a/src/components/gridLayout/gridLayout.module.css
+++ b/src/components/gridLayout/gridLayout.module.css
@@ -73,6 +73,9 @@ p {
 .hudElement {
   position: relative;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .hudElement::after {
@@ -119,9 +122,7 @@ p {
   background: rgba(34, 38, 40, 0.25);
   backdrop-filter: blur(0.2rem);
   padding: 1.5rem;
-
   text-align: center;
-
   border-left: 1.5rem solid rgba(0, 255, 242, 0.18);
   border-right: 1.5rem solid rgba(0, 255, 242, 0.18);
 }
@@ -139,4 +140,20 @@ p {
 
 .dragMe:hover {
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+.widgetContent {
+  flex: 1;
+  margin-top: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  border-radius: 0.5rem;
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
